Fixes #26630: Dubius vertical alignement in generic method

--- a/webapp/sources/rudder/rudder-web/src/main/style/rudder/rudder-technique-editor.scss
+++ b/webapp/sources/rudder/rudder-web/src/main/style/rudder/rudder-technique-editor.scss
@@ -1006,15 +1006,19 @@ ul li.hide-method {
   padding-right: 70px;
 }
 #methods .method .method-info label {
-  margin-bottom: 0;
+  margin-bottom: 4px;
   word-break: keep-all;
+  display: inline-flex;
+  align-items: baseline;
 }
 .method .cursorMove {
   background-color: $rudder-bg-dark-gray;
-  padding: 0 10px;
   color: #04192299;
+  padding: 0 10px;
+  min-width: 38px;
   display: flex;
   align-items: center;
+  justify-content: center;
   cursor: grab;
   border-top-left-radius: 4px;
   border-bottom-left-radius: 4px;
@@ -1091,7 +1095,7 @@ ul li.hide-method {
 }
 .method .method-info .method-condition:not(.d-none),
 .method .method-info .method-condition.d-none ~ .method-name{
-  padding-top: 25px;
+  padding-top: 30px;
 }
 .method .method-info.closed .method-param{
   padding-left: 15px;
@@ -1511,28 +1515,38 @@ ul li.hide-method {
 .gm-labels .gm-label.rudder-label.btn {
   cursor: pointer;
 }
-.gm-labels .gm-label.rudder-label {
-  font-size:11px;
-  opacity:0.9;
-  display: inline-block;
-  padding: 0 10px;
-  height: 25px;
-  text-align: center;
-  vertical-align: middle;
-  line-height: 25px;
-  border-radius: 0 0 5px 5px;
-  z-index:10;
-  margin: 0 0 0 5px;
-  font-weight:500;
-  min-width: 0px;
-  cursor: default;
+.gm-labels {
+  .gm-label.rudder-label {
+    font-size:11px;
+    opacity:0.9;
+    display: inline-block;
+    padding: 0 10px;
+    height: 25px;
+    text-align: center;
+    vertical-align: middle;
+    line-height: 25px;
+    border-radius: 0 0 5px 5px;
+    z-index:10;
+    margin: 0 0 0 5px;
+    font-weight:500;
+    min-width: 0px;
+    cursor: default;
 
-  &.gm-foreach{
-    background-color: $rudder-primary !important;
-    opacity: 1;
-    & > .counter{
+    &.gm-foreach{
+      background-color: $rudder-primary !important;
+      opacity: 1;
+      & > .counter{
         background-color: color.scale($rudder-primary, $lightness: -20%);
+      }
     }
+  }
+
+  &.policy-mode-label .gm-label.rudder-label.dropdown-toggle{
+    display: inline-flex;
+    align-items: center;
+    line-height: initial;
+    text-align: initial;
+    vertical-align: initial;
   }
 }
 
